# How to link to static library
cmake_minimum_required(VERSION 3.15)
project(test)
# set(SRC factorial.cpp main.cpp printhello.cpp)
aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
# file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(EXECUTABLE_OUTPUT_PATH /home/cdc/Desktop/Cmaketest3/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
set(CMAKE_CXX_STANDARD 11)
link_libraries(calc)
link_directories(${PROJECT_SOURCE_DIR}/lib1)
add_executable(app ${SRC})