# How to link to share library
cmake_minimum_required(VERSION 3.15)
project(test)
# set(SRC factorial.cpp main.cpp printhello.cpp)
aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
# file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(EXECUTABLE_OUTPUT_PATH /home/cdc/Desktop/Cmaketest4/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
set(CMAKE_CXX_STANDARD 11)
message("xxxxxxxx")
link_directories(${PROJECT_SOURCE_DIR}/lib2)
add_executable(app ${SRC})
message(STATUS "111xxxxxxxx")
target_link_libraries(app calc)# write to last line
#message(FATAL_ERROR "222xxxxxxxx")
message(STATUS "333xxxxxxxx")